[package]
name = "diesel-enum-sqltype"
version = "0.1.6"
edition = "2021"
license = "MIT"
authors = ["Eugene Korir"]
keywords = ["diesel","postgres","enum"]
readme = "README.md"
description = "Provides derive macro for FromSql and ToSql traits for postgres enums"
repository = "https://github.com/korir248/to-from-sql-derive"
publish = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = { version = "2.0.37", features = ["full"] }

[lib]
name = "diesel_enum_sqltype"
path = "src/lib.rs"
proc-macro = true

[dev-dependencies]
diesel = { version = "2.1", features = ["postgres", "chrono", "uuid"] }
